vertical align bugfix

--- a/css/style.css
+++ b/css/style.css
@@ -1399,6 +1399,7 @@ input[type="radio"].visually-hidden {
     line-height: 21px;
 
     display: inline-block;
+    vertical-align: top;
 
     padding: 3px 12px 3px 12px;
     margin-bottom: 20px;
